manifests/nextcloud/resources/website-one-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    haproxy-ingress.github.io/config-backend: |
      acl dotgit path_beg /.git
      http-request deny if dotgit
  labels:
    app.kubernetes.io/name: website-one
  name: website-one
  namespace: nextcloud
spec:
  rules:
  - host: ${website_one_hostname}
    http:
      paths:
      - backend:
          service:
            name: website-one
            port:
              number: 8081
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ${website_one_hostname}
    secretName: website-one-tls
